--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.0.0",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "next-auth": "^4.3.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
   }
