--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
     "firebase": "^9.6.9",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "recoil": "^0.6.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.0.0",
