--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "firebase": "^9.6.9",
+    "moment": "^2.29.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "recoil": "^0.6.1"
   },
   "devDependencies": {
