--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-moment": "^1.1.1",
     "recoil": "^0.6.1"
   },
@@ -21,6 +22,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.0",
     "next-auth": "^4.3.0",
     "postcss": "^8.4.5",
